# brieftaube

./: Cargo.toml  README.md  notes.md
src/: backend.rs  config.rs  lib.rs  main.rs
src/backend/: mailboxes.rs  mails.rs  mod.rs  root_mails.rs  task_manager.rs  thread.rs  threads.rs
src/backend/mailbox/: error.rs  mod.rs
src/backend/mailboxes/: mailbox_data.rs  mod.rs
src/backend/mails/: mod.rs
src/composer/: mail_template.rs  state.rs
src/composer/ui/: action.rs  mod.rs  state.rs  widget.rs
src/log_viewer/ui/: action.rs  state.rs  widget.rs
src/mail_list/: action.rs  mod.rs  state.rs
src/mail_list/backend/: backend.rs  mail_data.rs  mail_renderable.rs  manager.rs  mod.rs
src/mail_list/ui/: action.rs  state.rs
src/mail_list/widget/: mod.rs  render_data.rs
src/mail_viewer/: action.rs  mod.rs  state.rs
src/mail_viewer/types/: full_mail_display.rs  mod.rs
src/mail_viewer/ui/: action.rs  mod.rs  state.rs  widget.rs
src/mail_viewer/widget/: mod.rs  render_data.rs
src/mailboxes/: action.rs  mod.rs  state.rs
src/mailboxes/backend/: layer.rs  mod.rs  task_error.rs
src/mailboxes/state/: mod.rs
src/mailboxes/ui/: action.rs  mod.rs  state.rs
src/mailboxes/widget/: mod.rs
src/mails/ui/: action.rs  mod.rs  state.rs
src/root_mails/: mod.rs
src/root_mails/backend/: backend.rs  mail_data.rs  mail_renderable.rs  mod.rs
src/root_mails/ui/: action.rs  state.rs
src/statusbar/: mod.rs  state.rs  widget.rs
src/statusbar/state/: counter.rs  mod.rs
src/thread_mails/ui/: action.rs  state.rs
src/ui/: action.rs  command_palette.rs  keybindmanager.rs  mod.rs  palette.rs
src/ui/composer/: action.rs  mail.rs  mod.rs  state.rs  widget.rs
src/ui/log_viewer/: action.rs  mod.rs  state.rs  widget.rs
src/ui/mail_viewer/: action.rs  mod.rs  state.rs  widget.rs
src/ui/mailboxes/: action.rs  list.rs  mod.rs  state.rs
src/ui/mails/: action.rs  mail_list.rs  mailbox_list.rs  mails.rs  mod.rs  preview.rs  state.rs  statusbar.rs
src/ui/pager/: action.rs  mod.rs
src/ui/root_mails/: action.rs  state.rs
src/ui/thread_mails/: action.rs  mod.rs  state.rs
src/ui/util/: mod.rs
src/ui/utils/: input.rs  mod.rs  overlay.rs  (+1 more)
src/utils/: email_keyword.rs  mod.rs
(+75 files in other folders)
