[package]
name = "brieftaube"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
crossterm = { version = "0.29", default-features = false, features = [
  "bracketed-paste",
  "derive-more",
  "events",
] }
ratatui = "0.30"
ratatui-textarea = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
toml = { version = "1.1" }
# tokio = { version = "1.52", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = "3.0.0"
