[package]
name = "brieftaube"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
crossterm = { version = "0.29", default-features = false, features = [
  "bracketed-paste",
  "derive-more",
  "events",
] }
jmap-client = { git = "https://github.com/TornaxO7/jmap-client", branch = "my" }
nucleo = "0.5"
ratatui = "0.30"
ratatui-textarea = "0.9.2"
tui-widget-list = "0.15"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1"
tokio = { version = "1.52", features = ["full"] }
tokio-macros = "2.7"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = "3.0"
